--- a/css/piano.css
+++ b/css/piano.css
@@ -180,6 +180,23 @@ footer {
   transition: var(--secondary-transition);
 }
 
+#loadingDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  background-color: var(--black);
+}
+
+.loader {
+  width: 9rem;
+  height: 9rem;
+  background: center / contain no-repeat url(../img/loader.gif);
+}
+
 ::selection {
   color: var(--soapstone);
   background-color: var(--dark-jungle-green);
